Implemented the phi field normal vector calculations for the Eulerian Level Set method

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2853,6 +2853,149 @@ def slow_test_read_flammap_outputs():
 #+end_src
 
 * Fire Spread on a Raster Grid
+
+In order to simulate the spread of a fire from a starting point or
+perimeter, we will need to implement a model that projects the
+one-dimensional spread and intensity equations presented above into
+the three-dimensional space-time cube introduced in section [[Data
+Model]].
+
+As a library, Pyretechnics has the flexibility to implement more than
+one such algorithm for the purposes of comparison in both performance
+and accuracy. The following sections will introduce the spread
+algorithms implemented thus far.
+
+*** Eulerian Level Set Method
+
+**** The \phi Field
+
+In the Eulerian Level Set Method of fire spread, operationalized in
+Chris Lautenberger's ELMFire model\cite{?}, a continuous field called
+\phi fills the simulation space and is used to track the progression
+of the fire front through space and time. Within Pyretechnics, the
+\phi field is discretized into grid cells with the following values:
+
+- -1 :: cells that have already been burned and are inside the fire perimeter
+- 0 :: cells that are currently burning and coincide with the fire perimeter
+- 1 :: cells that have not been burned and are outside the fire perimeter
+
+At the start of the simulation, the \phi grid cells are initialized so
+as to identify the actively burning fire perimeter. If a point fire is
+being simulated, then a single \phi cell will be set to 0 and the
+remaining cells will have the value 1.
+
+**** Fire Front Normal Vector
+
+In this fire spread algorithm, the fire front only propagates normal
+to itself. Given a \phi raster, we can calculate the normal vector to
+the \phi field by using the following formula:
+
+\begin{align*}
+# TODO: Insert normal vector and gradient formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+We begin by approximating the spatial gradients of the \phi field with
+node-centered central differences, represented by the values in the
+\phi raster's grid cells.
+
+\begin{align*}
+# TODO: Insert spatial gradient formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi-field-spatial-gradients
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_dphi_dx(phi, x, y, dx):
+    """
+    Calculate the spatial gradient of the phi raster in the x (west->east)
+    direction at grid cell (x,y) given the cell width dx.
+
+    NOTE: The origin cell (x=0,y=0) is located in the upper left corner
+          of the grid in Python arrays. Thus, as x increases, we move
+          to the east, and as y increases, we move to the south.
+    """
+    return (phi[y][x+1] - phi[y][x-1]) / (2.0 * dx)
+
+
+def calc_dphi_dy(phi, x, y, dy):
+    """
+    Calculate the spatial gradient of the phi raster in the y (south->north)
+    direction at grid cell (x,y) given the cell height dy.
+
+    NOTE: The origin cell (x=0,y=0) is located in the upper left corner
+          of the grid in Python arrays. Thus, as x increases, we move
+          to the east, and as y increases, we move to the south.
+    """
+    return (phi[y-1][x] - phi[y+1][x]) / (2.0 * dy)
+#+end_src
+
+We can now combine these spatial gradients with the magnitude of the
+\phi field at any location on the grid to compute the fire front
+normal vector as follows:
+
+#+name: phi-field-normal-vector
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+from math import sqrt
+
+def calc_phi_gradient_magnitude(dphi_dx, dphi_dy):
+    """Calculate the magnitude of the gradient of the phi field."""
+    return sqrt(dphi_dx ** 2 + dphi_dy ** 2)
+
+
+def calc_phi_normal_vector(phi, dx, dy, x, y):
+    """
+    Calculate the phi field normal vector in the x and y dimensions.
+
+    n_x: eastward component of the unit normal vector
+    n_y: northward component of the unit normal vector
+    """
+    dphi_dx = calc_dphi_dx(phi, x, y, dx)
+    dphi_dy = calc_dphi_dy(phi, x, y, dy)
+    if dphi_dx == 0.0 and dphi_dy == 0.0:
+        return {
+            "n_x": 0.0,
+            "n_y": 0.0,
+        }
+    else:
+        phi_gradient_magnitude = calc_phi_gradient_magnitude(dphi_dx, dphi_dy)
+        return {
+            "n_x": dphi_dx / phi_gradient_magnitude,
+            "n_y": dphi_dy / phi_gradient_magnitude,
+        }
+#+end_src
+
+Next, we can use the following geometrical relations to calculate the
+angle \theta (measured clockwise from North) to which the normal
+vector points:
+
+\begin{align*}
+# TODO: Insert normal vector theta formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi-field-normal-vector-angle
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+from math import atan2, pi
+
+def calc_phi_normal_vector_angle(phi_normal_vector):
+    """
+    Calculate the angle (measured in radians clockwise from North)
+    to which the phi field's normal vector points.
+
+    NOTE: The origin cell (x=0,y=0) is located in the upper left corner
+          of the grid in Python arrays. Thus, as x increases, we move
+          to the east, and as y increases, we move to the south.
+    """
+    n_x = phi_normal_vector["n_x"]
+    n_y = phi_normal_vector["n_y"]
+    if n_x >= 0 and n_y >= 0:
+        return 1/2 * pi - atan2(n_y, n_x)
+    elif n_x < 0 and n_y >= 0:
+        return 3/2 * pi + atan2(n_y, abs(n_x))
+    elif n_x < 0 and n_y < 0:
+        return 3/2 * pi - atan2(n_y, n_x)
+    elif n_x >= 0 and n_y < 0:
+        return 1/2 * pi + atan2(abs(n_y), n_x)
+#+end_src
+
 * Appendix: Units Conversion Functions
 
 #+name: conversion
