--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2919,7 +2919,7 @@ node-centered central differences, represented by the values in the
 
 #+name: phi-field-spatial-gradients
 #+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
-def calc_dphi_dx(phi, x, y, dx):
+def calc_dphi_dx_approx(phi, x, y, dx):
     """
     Calculate the spatial gradient of the phi raster in the x (west->east)
     direction at grid cell (x,y) given the cell width dx.
@@ -2931,7 +2931,7 @@ def calc_dphi_dx(phi, x, y, dx):
     return (phi[y][x+1] - phi[y][x-1]) / (2.0 * dx)
 
 
-def calc_dphi_dy(phi, x, y, dy):
+def calc_dphi_dy_approx(phi, x, y, dy):
     """
     Calculate the spatial gradient of the phi raster in the y (south->north)
     direction at grid cell (x,y) given the cell height dy.
@@ -2963,8 +2963,8 @@ def calc_phi_normal_vector(phi, dx, dy, x, y):
     n_x: eastward component of the unit normal vector
     n_y: northward component of the unit normal vector
     """
-    dphi_dx = calc_dphi_dx(phi, x, y, dx)
-    dphi_dy = calc_dphi_dy(phi, x, y, dy)
+    dphi_dx = calc_dphi_dx_approx(phi, x, y, dx)
+    dphi_dy = calc_dphi_dy_approx(phi, x, y, dy)
     if dphi_dx == 0.0 and dphi_dy == 0.0:
         return {
             "n_x": 0.0,
@@ -3010,6 +3010,196 @@ def calc_phi_normal_vector_angle(phi_normal_vector):
     elif n_x >= 0 and n_y < 0:
         return 1/2 * pi + atan2(abs(n_y), n_x)
 #+end_src
+
+Now that we can compute the fire front normal vector, we can find the
+spread rate in this direction by simply calculating the dot product of
+the normal vector with the maximum spread rate vector calculated for
+each cell.
+
+**** Numerical Solution of the \phi Field Equation
+
+In order to evolve the \phi field through time and space, we must
+solve the following hyperbolic differential equation for the scalar
+variable \phi.
+
+\begin{align*}
+# TODO: Insert main hyperbolic differential equation for \phi from https://elmfire.io/tech_ref.html
+\end{align*}
+
+This is accomplished after applying a flux limiter to the convective
+terms, in order to ensure solution monotonicity and prevent spurious
+oscillations that can be induced in its absence.
+
+First, we define the parameter $r$ and the Superbee flux limiter
+$B(r)$ as follows:
+
+\begin{align*}
+# TODO: Insert r and B(r) formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: superbee-flux-limiter
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc):
+    """
+    TODO: Add docstring
+    """
+    r = sig_phi_up / sig_phi_loc
+    return max(0,
+               min(2 * r, 1),
+               min(r, 2))
+#+end_src
+
+To compute the inputs to this function, we build up the partial
+derivatives of the \phi field as follows:
+
+\begin{align*}
+# TODO: Insert sig_phi_sig_x and sig_phi_sig_y formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: sig_phi_partial_derivatives
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_dphi_dx(phi_east, phi_west, dx):
+    """
+    TODO: Add docstring
+    """
+    return (phi_east - phi_west) / dx
+
+def calc_dphi_dy(phi_north, phi_south, dy):
+    """
+    TODO: Add docstring
+    """
+    return (phi_north - phi_south) / dy
+#+end_src
+
+For the east face:
+
+\begin{align*}
+# TODO: Insert phi_east formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi_east
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_phi_east(phi, u_x, x, y):
+    """
+    TODO: Add docstring
+    """
+    sig_phi_loc = phi[y][x+1] - phi[y][x]
+    if u_x[y][x] >= 0:
+        sig_phi_up = phi[y][x] - phi[y][x-1]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y][x] + 0.5 * B * sig_phi_loc
+    else:
+        sig_phi_up = phi[y][x+2] - phi[y][x+1]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y][x+1] - 0.5 * B * sig_phi_loc
+#+end_src
+
+For the west face:
+
+\begin{align*}
+# TODO: Insert phi_west formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi_west
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_phi_west(phi, u_x, x, y):
+    """
+    TODO: Add docstring
+    """
+    sig_phi_loc = phi[y][x-1] - phi[y][x]
+    if u_x[y][x] >= 0:
+        sig_phi_up = phi[y][x-2] - phi[y][x-1]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y][x-1] - 0.5 * B * sig_phi_loc
+    else:
+        sig_phi_up = phi[y][x] - phi[y][x+1]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y][x] + 0.5 * B * sig_phi_loc
+#+end_src
+
+For the north face:
+
+\begin{align*}
+# TODO: Insert phi_north formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi_north
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_phi_north(phi, u_y, x, y):
+    """
+    TODO: Add docstring
+    """
+    sig_phi_loc = phi[y-1][x] - phi[y][x]
+    if u_y[y][x] >= 0:
+        sig_phi_up = phi[y][x] - phi[y+1][x]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y][x] + 0.5 * B * sig_phi_loc
+    else:
+        sig_phi_up = phi[y-2][x] - phi[y-1][x]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y-1][x] - 0.5 * B * sig_phi_loc
+#+end_src
+
+For the south face:
+
+\begin{align*}
+# TODO: Insert phi_south formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi_south
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_phi_south(phi, u_y, x, y):
+    """
+    TODO: Add docstring
+    """
+    sig_phi_loc = phi[y+1][x] - phi[y][x]
+    if u_y[y][x] >= 0:
+        sig_phi_up = phi[y+2][x] - phi[y+1][x]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y+1][x] - 0.5 * B * sig_phi_loc
+    else:
+        sig_phi_up = phi[y][x] - phi[y-1][x]
+        B = calc_superbee_flux_limiter(sig_phi_up, sig_phi_loc)
+        return phi[y][x] + 0.5 * B * sig_phi_loc
+#+end_src
+
+Now that the various spatial partial derivatives have been calculated,
+we can march the \phi field solution forward in time using a second
+order Runge Kutta method as follows:
+
+\begin{align*}
+# TODO: Insert phi_* and phi_t+dt formulas from https://elmfire.io/tech_ref.html
+\end{align*}
+
+#+name: phi_time
+#+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
+def calc_phi_time(dx, dy, dt):
+    """
+    TODO: Add docstring (computes phi_{t+dt})
+    """
+    # FIXME: Figure out how to compute all the new terms here:
+    phi_t = 0
+    U_x = 0
+    phi_east_t = 0
+    phi_west_t = 0
+    U_y = 0
+    phi_north_t = 0
+    phi_south_t = 0
+    phi_star = 0
+    U_x_star = 0
+    phi_east_star = 0
+    phi_west_star = 0
+    U_y_star = 0
+    phi_north_star = 0
+    phi_south_star = 0
+    phi_star = phi_t - dt * (U_x * (phi_east_t - phi_west_t) / dx + U_y * (phi_north_t - phi_south_t) / dy)
+    return 0.5 * phi_t + 0.5 * (phi_star - dt * (U_x_star * (phi_east_star - phi_west_star) / dx + U_y_star * (phi_north_star - phi_south_star) / dy))
+#+end_src
+
+In the above equations, timestep ($\Delta t$) is constrained by the
+Courant-Friedrichs-Lewy (CFL) condition. The location of the fire
+perimeter is determined by interpolation of the \phi field as the
+level set corresponding to $\phi = 0$.
 
 * Appendix: Units Conversion Functions
 
